--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,90 +14,58 @@ TABLE OF CONTENTS:
 */
 
 /* 0. Reset ================================= */
-@import 'reset';
-
+@import "reset";
 
 /* 1. Main Layout ================================= */
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	background: #ccc;
+  background: #f5f2e8;
 }
-
-
-
 
 /* 2. Content ================================= */
 
-.floating-box {
-	position: relative;
-	font-family: sans-serif;
-	width: 90%;
-	max-width: 500px;
-	margin: 140px auto;
-	padding: 30px 20px 30px 30px;
-	.foreground {
-		position: relative;
-		z-index: 2;
-		transform: translateZ(100px);
-	}
-	.background {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		left: 0;
-		top: 0;
-		background: white;
-		z-index: 1;
-		// perspective: 2000px;
-		transition: 0.2s;
-		transform: translateX(20px) perspective(600px) rotateY(15deg);
-	}
-	&:hover .background {
-		transform: translateX(-30px) perspective(600px) rotateY(-15deg);		
-	}
-	.logo {
-		position: absolute;
-		top: -30px;
-		width: 60px;
-		z-index: 2;
-		transform: translateZ(100px);
-		transition: 0.3s;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffcc01;
+  padding: 12px 20px;
 
-		&:hover {
-			transform: rotate(-0.4turn)
-		}
-	}
-	h1 {
-		font-weight: 700;
-		font-size: 22pt;
-		margin: 15px 0;
-	}
-	p {
-		color: #777;
-		// margin: 10px 0;
-		line-height: 140%;
-	}
-	p.github {
-		font-size: 0.8em;
-		
-		a {
-			opacity: 0.2;
-			transition: 0.3s;
-			&:hover {
-				opacity: 1;
-				color: red;
-			}
-		}
-	}
-	code {
-		position: absolute;
-		top: 20px;
-		right: 20px;
-		font-size: 0.8em;
-		opacity: 0.2;
-	}
+  .logo {
+    display: flex;
+
+    img {
+      height: 38px;
+      width: 150px;
+    }
+  }
+
+  input {
+    background-image: url("../img/search-icon.png");
+    background-repeat: no-repeat;
+    background-position: 96% center;
+    background-size: 18px 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 260px;
+    padding: 15px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+
+    &::placeholder {
+      color: #d0d0d0;
+    }
+  }
+}
+
+#my-map {
+  width: 90%;
+  height: 350px;
+  margin: 30px auto;
 }
